--- a/latex/main.tex
+++ b/latex/main.tex
@@ -29,7 +29,7 @@
 %     keywordstyle=\color{listingskeywordcolor}\footnotesize\listingsfont,
 %     stringstyle=\color{listingsstringcolor}\footnotesize\listingsfont,
 %     commentstyle=\color{listingscommentcolor}\footnotesize\listingsfont,
-%     numberstyle=\color{listingsnumbercolor}\footnotesize\listingsfont,
+%     numberstyle=\gls{pde}\color{listingsnumbercolor}\footnotesize\listingsfont,
 %     identifierstyle=\footnotesize\listingsfont,
 % }
 
@@ -37,11 +37,12 @@
 
 % compile with pdflatex --shell-escape main.tex
 
-
 %opening
 \author{Fredrik E Pettersen\\ f.e.pettersen@fys.uio.no}
 \title{\uppercase{Multiscale modeling of diffusion processes in the brain}}
 \date{June 2014}
+
+
 \begin{document}
 
 
