fixed precission error in commandline arguments causing dt<=1e-7 to be interpreted as 0

--- a/latex/main.tex
+++ b/latex/main.tex
@@ -14,7 +14,7 @@
 \usepackage{epstopdf}
 
 
-\usepackage[]{biblatex}
+\usepackage[backend=bibtex]{biblatex}
 % \bibliography{bibtex_ref_test.bib}
 \bibliography{references.bib}
 
