Found out that the second part of the step is correct, the first part however... Do not understand what is the problem

--- a/latex/main.tex
+++ b/latex/main.tex
@@ -81,7 +81,8 @@ This is an abstract text.
 
 \chapter{Results}
 
-
+\appendix{A}
+\include{appendix}
 
 %-------Bibliography-------%
 \printbibliography
