--- a/latex/theory.tex
+++ b/latex/theory.tex
@@ -283,20 +283,20 @@ and insert for $\phi$
  \frac{\phi^n_{i+1/2}-\phi^n_{i-1/2}}{\Delta x} = \frac{1}{\Delta x^2}\left(D_{i+1/2}(u^n_{i+1}-u^n_{i+1}) -D_{i-1/2}(u^n_{i}-u^n_{i-1})\right)
 \end{align*}
 Since we can only evaluate the diffusion constant at the mesh points (or strictly speaking since it is a lot simpler to do so) we must approximate $D_{i\pm1/2}\approx0.5(D_{i\pm1}+D_i)$. 
-Inerting this gives us 
+Inserting this gives us 
 \begin{align*}
  \nabla D\nabla u\approx\frac{1}{2\Delta x^2}\left((D_{i+1,j}+D_{i,j})(u_{i+1,j}-u_{i,j})-(D_{i,j}+D_{i-1,j})(u_{i,j}-u_{i-1,j})\right) \\
  +\frac{1}{2\Delta y^2}\left((D_{i,j+1}+D_{i,j})(u_{i,j+1}-u_{i,j})-(D_{i,j}+D_{i,j-1})(u_{i,j}-u_{i,j-1})\right)
 \end{align*}
-The Forward Euler discretization has one drawaback which is its instability for ``large'' $\Delta t$. 
+The Forward Euler discretization has one drawback which is its instability for ``large'' $\Delta t$. 
 A common tradeoff for explicit numerical schemes. 
 We could sacrifice ease of implementation for unconditional stability in our scheme. 
-At least in 1d the implemetation is not that much worse either if we chose the Backward Euler discretisation for an isotropic (homogenous) equation. 
-The discretisation itself is found in equation \ref{BE_discretisation_isotropic}. 
+At least in 1d the implementation is not that much worse either if we chose the Backward Euler discretization for an isotropic (homogeneous) equation. 
+The discretization itself is found in equation \ref{BE_discretisation_isotropic}. 
 \begin{equation}\label{BE_discretisation_isotropic}
  \frac{u^n_i - u^{n-1}_i}{\Delta t} = D\frac{u^n_{i+1}-2u^n_i +u^n_{i-1}}{\Delta x^2}
 \end{equation}
-The advantage of this discretisation is that it results in a tridiagonal linear system, which we can easily find if we just insert the first couple of steps.
+The advantage of this discretization is that it results in a tridiagonal linear system, which we can easily find if we just insert the first couple of steps.
 \begin{align*}
  \frac{u^{n}_i-u^{n-1}_i}{\Delta t} = D\frac{u^n_{i+1}-2u^n_i + u^n_{i-1}}{\Delta x^2} \\
  u^n_i -\frac{D\Delta t}{\Delta x^2}\left(u^n_{i+1}-2u^n_i + u^n_{i-1}\right) = u^{n-1}_i \\
@@ -316,8 +316,27 @@ If we insert for a few steps we see that this takes the form of
 \begin{equation*}
  \mathbf{A}\mathbf{u}^n = \mathbf{u}^{n-1}
 \end{equation*}
-This can be solved vey efficiently by a sparse Gaussian elimination, which is quite simple to implement once you take the boundary conditions into account. 
-We implement the Backward Euler discretisation in order to efficiently simlulate for longer times, and by extension to test the effects the longer timesteps will have on the random walk model.
+This can be solved very efficiently by a sparse Gaussian elimination, which is quite simple to implement once you take the boundary conditions into account. 
+We implement the Backward Euler discretization in order to efficiently simulate for longer times, and by extension to test the effects the longer time steps will have on the random walk model. \\
+We would, of course, also like an implicit solver in 2 and 3d as well to make sure that we can take longer time steps here as well. 
+Doing the BE discretization in 2d gives us a slightly more difficult linear problem (eq \ref{backward_euler_2d}), which is still sparse, but we do not have any simple, efficient solver for five-band matrices. 
+There is another discretization which lets us utilize our tridiagonal solver, and is implicit and unconditionally stable in 2d, the Alternate Direction Implicit (ADI) scheme. 
+The ADI scheme divides the time step in two and only propagates one of the derivatives at a time, making it very similar to the Crank Nicholson scheme. 
+In fact, the truncation error in the ADI scheme is of second order, just as in the CN scheme, but this is (as discussed earlier) of small importance in this thesis. 
+Discretizing the simple diffusion equation by the ADI scheme is done as follows.
+\begin{align*}
+ \frac{u^{n+1/2}-u^n}{\Delta t/2} &= D\left(D_xD_xu^{n+1/2}+D_yD_yu^n\right)\\
+ \frac{u^{n+1}-u^{n+1/2}}{\Delta t/2} &= D\left(D_xD_xu^{n+1/2}+D_yD_yu^{n+1}\right)
+\end{align*}
+We can write this as two standard equations on the form 
+\begin{align*}
+\mathcal{A}_{1/2}\mathbf{u}^{n+1/2} = \mathbf{u}^n \\
+\mathcal{A}_{1}\mathbf{u}^{n+1} = \mathbf{u}^{n+1/2} 
+\end{align*}
+Note that the indices are only intended as labels. For a $3\times3$ mesh the equations are shown in the appendix.
+
+
+
 
 \subsection{Stability}\label{stability}
 
